Docker How to reproduce CVE-2022-0492.

--- a/system.htm
+++ b/system.htm
@@ -437,6 +437,10 @@ docker.sock</a><br>
 &lowast;
 <a href="system/docker/fix_sending.htm">
 為何"Sending build context to Docker daemon"會送很大的檔案</a><br>
+
+&lowast;
+<a href="system/docker/cve-2022-0492.htm">
+CVE-2022-0492</a><br>
 <br><br><br><br>
 
 <div id="podman"></div>
