OpenAI Added CVE-2023-37273.

--- a/system.htm
+++ b/system.htm
@@ -31,6 +31,7 @@
     <a href="#vxworks">     <img src="img/photos/vxworks.jpg"       class="t0" title="VxWorks"/></a>
     <a href="#autosd">      <img src="img/photos/autosd.jpg"        class="t0" title="Automotive Stream Distribution (AutoSD)"/></a>
     <a href="#yocto">       <img src="img/photos/yocto.jpg"         class="t0" title="The Yocto Project"/></a>
+    <a href="#openai">      <img src="img/photos/openai.jpg"        class="t0" title="OpenAI"/></a>
 </p>
 </div>
 
@@ -638,6 +639,16 @@ The Yocto Project</h3>
 &dash;
 <a href="system/yocto_fix_docker_bridge.htm">
 解決Docker Error creating default "bridge" network問題</a><br>
+<br><br><br><br>
+
+<div id="openai"></div>
+<h3><img src="img/photos/openai.jpg" class="floatLeft"/>
+OpenAI</h3>
+<hr size="1"><br><br><br><br><br>
+
+&dash;
+<a href="system/openai_cve_2023_37273.htm">
+CVE-2023-37273</a><br>
 <br><br><br><br>
 </p>
 
