--- a/system/openai_cve_2023_37273.htm
+++ b/system/openai_cve_2023_37273.htm
@@ -6,7 +6,8 @@
 <hr size="1"><br>
 <p>
 參考資訊：<br>
-https://www.cvedetails.com/cve/CVE-2023-37273/<br><br>
+https://www.cvedetails.com/cve/CVE-2023-37273/<br>
+https://github.com/Significant-Gravitas/AutoGPT<br><br>
 
 步驟如下： 
 </p>
@@ -64,5 +65,8 @@ Check
 $ cat docker-compose.yml 
     hello, world!
 </pre>
+<p>
+P.S. 如果只是要測試Container問題，可以直接修改<b>autogpt/cli.py</b>的main
+</p>
 
 <br><script type="text/javascript" src="../tail.js"></script>
