OpenAI Added CVE-2023-37274 case.

--- a/system.htm
+++ b/system.htm
@@ -649,6 +649,10 @@ OpenAI</h3>
 &dash;
 <a href="system/openai_cve_2023_37273.htm">
 CVE-2023-37273</a><br>
+
+&dash;
+<a href="system/openai_cve_2023_37274.htm">
+CVE-2023-37274</a><br>
 <br><br><br><br>
 </p>
 
