OpenAI Added cve-2024-1881.

--- a/system.htm
+++ b/system.htm
@@ -658,6 +658,10 @@ OpenAI</h3>
 <hr size="1"><br><br><br><br><br>
 
 &dash;
+<a href="system/openai_cve_2024_1881.htm">
+CVE-2024-1881</a><br>
+
+&dash;
 <a href="system/openai_cve_2023_37273.htm">
 CVE-2023-37273</a><br>
 
