--- a/system/docker_cve_2022_0492.htm
+++ b/system/docker_cve_2022_0492.htm
@@ -36,5 +36,8 @@ cve:/# exit
 # ls /tmp
     cve_test
 </pre>
+<p>
+P.S. unshare後面可以直接接命令，如：unshare -UrmC mount -t group -o release_agent=test cgroup /mnt
+</p>
 
 <br><script type="text/javascript" src="../tail.js"></script>
